@@ -10,7 +10,7 @@
 #
 # Game Definition
 #
-INSERT IGNORE INTO `++DB_PREFIX++_Games` VALUES ('l4d','Left 4 dead','1','0');
+INSERT IGNORE INTO `++DB_PREFIX++_Games` VALUES ('l4d','Left 4 Dead','1','0');
 
 #
 # Awards
@@ -28,6 +28,7 @@ INSERT IGNORE INTO `++DB_PREFIX++_Awards` VALUES (NULL,'W','tf2','tank_claw','Bu
 
 #
 # Teams
+# 
 INSERT IGNORE INTO `++DB_PREFIX++_Teams` VALUES (NULL,'l4d','Infected','Infected','0');
 INSERT IGNORE INTO `++DB_PREFIX++_Teams` VALUES (NULL,'l4d','Survivor','Survivor','0');
 INSERT IGNORE INTO `++DB_PREFIX++_Teams` VALUES (NULL,'l4d','Spectator','Spectator','0');
@@ -44,8 +45,6 @@ INSERT IGNORE INTO `++DB_PREFIX++_Roles` VALUES (NULL,'l4d','NamVet','Bill','0')
 INSERT IGNORE INTO `++DB_PREFIX++_Roles` VALUES (NULL,'l4d','TANK','Tank','0');
 INSERT IGNORE INTO `++DB_PREFIX++_Roles` VALUES (NULL,'l4d','TeenGirl','Teen Girl','0');
 INSERT IGNORE INTO `++DB_PREFIX++_Roles` VALUES (NULL,'l4d','Unknown','Unknown','0');
-
-
 
 #
 # Weapons
